Bug 1162357 - Convert some usage of DataSourceSurface::GetData() to Map(). r=bas

--HG--
extra : rebase_source : aebb45613926c64355e5b193bc79166cf04292be